set default guioptions without any tabnumbering, because: * even vim's default tabs don't show numbers * go=N is too obtrusive as a default value, since i think more people prefer their full favicons over the tab numbers * go=n prints the number 1px too high (easily fixable on linux i guess, but needs also checking on other platforms) * mailing list complaints about it not working correctl on windows/macos.

--- a/skin/liberator.css
+++ b/skin/liberator.css
@@ -134,6 +134,8 @@ the terms of any one of the MPL, the GPL or the LGPL.
 .hl-TabNumber {
     font-weight: bold;
     padding-right: .3ex;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 #liberator-container  {
